--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="tel:+91 8779613166" class="button"><i>📞</i> Call</a>
                 <a href="https://wa.me/+918779613166" class="button"><i>💬</i> WhatsApp</a>
                 <a href="mailto:funfestplanners@gmail.com" class="button"><i>✉️</i> Email</a>
-                <a href="https://g.co/kgs/oFneC8g" class="button"><i>⭐</i> Review</a>
+                <a href="https://g.co/kgs/L8Ag8tZ" class="button"><i>⭐</i> Review</a>
                 <button class="button" id="share-button"><i>🔗</i> Share Me</button>
             </div>
         </div>
@@ -151,7 +151,7 @@
         <div class="section">
             <h2>Company:</h2>
             <div class="button-grid">
-                <a href="https://drive.google.com/file/d/1kybiUhcEKacjmMIQrOcCVkyoGFZs9T6w/view?usp=drive_link" class="button"><i>🏢</i> Company</a>
+                <a href="https://drive.google.com/file/d/1Hn7zoG4Leww-z-p2VEHEM1EiuyOlICjP/view?usp=drive_link" class="button"><i>🏢</i> Company</a>
                 <a href=" https://g.co/kgs/dCx68Bx" class="button"><i>🏞️</i> Images</a>
 
                 <a href="https://www.google.com/maps/place/Northern+Supremus,+Dahisar+East/@19.2483689,72.8593738,
