--- a/index.html
+++ b/index.html
@@ -154,9 +154,7 @@
                 <a href="https://drive.google.com/file/d/1Hn7zoG4Leww-z-p2VEHEM1EiuyOlICjP/view?usp=drive_link" class="button"><i>🏢</i> Company</a>
                 <a href=" https://g.co/kgs/dCx68Bx" class="button"><i>🏞️</i> Images</a>
 
-                <a href="https://www.google.com/maps/place/Northern+Supremus,+Dahisar+East/@19.2483689,72.8593738,
-                17z/data=!3m1!4b1!4m6!3m5!1s0x3be7b193f1af94dd:0x99c62daf18a0a1b3!8m2!3d19.248369!4d72.8639872!16s%2Fg%2
-                F11swmz2jhx?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" class="button"><i>📍</i> Location</a>
+                <a href="https://www.google.com/maps/place/Om+Shree+Geetanjali+Nagar,+Geetanjali+Nagar,+Saibaba+Nagar,+Borivali,+Mumbai,+Maharashtra+400092/@19.2178558,72.8450773,18z/data=!3m1!4b1!4m6!3m5!1s0x3be7b6d485584d25:0x2d849cc41662be6e!8m2!3d19.2178195!4d72.8454914!16s%2Fg%2F11bychm3f1?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" class="button"><i>📍</i> Location</a>
             </div>
         </div>
 
